src/test/deca/context/invalid/homemade/tests/test342_new_no_class_float.deca
// test invalide de la règle 3.42



class A {
    int x;
}

{
    
    float a = new float();
}